src/objects/Apttus_Config2__IncentiveCoupon__c.object
<CustomObject>
    <description>Represents a coupon associated with an incentive</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the coupon is active</description>
        <inlineHelpText>Indicates whether the coupon is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssignedToDimensionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the dimension that identifies the assigned to data source</description>
        <inlineHelpText>ID of the dimension that identifies the assigned to data source</inlineHelpText>
        <label>Assigned To Dimension</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Incentive Coupons</relationshipLabel>
        <relationshipName>IncentiveCoupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssignedToID__c</fullName>
        <description>ID of the entity the coupon is assigned to</description>
        <inlineHelpText>ID of the entity the coupon is assigned to</inlineHelpText>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssignedToType__c</fullName>
        <description>Indicates the type of entity the coupon is assigned to</description>
        <inlineHelpText>Indicates the type of entity the coupon is assigned to</inlineHelpText>
        <label>Assigned To Type (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The coupon code</description>
        <externalId>true</externalId>
        <inlineHelpText>The coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponLimit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of times the coupon may be used.</description>
        <inlineHelpText>The number of times the coupon may be used.</inlineHelpText>
        <label>Coupon Limit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The coupon effective date. The coupon becomes effective on this date.</description>
        <inlineHelpText>The coupon effective date. The coupon becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The coupon expiration date. The coupon becomes ineffective after this date.</description>
        <inlineHelpText>The coupon expiration date. The coupon becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Coupons</relationshipLabel>
        <relationshipName>Coupons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumOfTimesUsed__c</fullName>
        <description>The number of times the coupon is used. Will be used to track the remaining limit</description>
        <inlineHelpText>The number of times the coupon is used. Will be used to track the remaining limit</inlineHelpText>
        <label>Number Of Times Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The coupon status</description>
        <inlineHelpText>The coupon status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incentive Coupon</label>
    <nameField>
        <displayFormat>CO-{000000}</displayFormat>
        <label>Coupon Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Apttus_Config2__DateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( NOT(ISNULL(Apttus_Config2__EffectiveDate__c)) &amp;&amp; NOT(ISNULL(Apttus_Config2__ExpirationDate__c)) &amp;&amp; Apttus_Config2__EffectiveDate__c &gt; Apttus_Config2__ExpirationDate__c, true, false)</errorConditionFormula>
        <errorMessage>Effective date cannot be greater then expiration date.</errorMessage>
    </validationRules>
</CustomObject>